app-manifests/service.yaml
# app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-app-ns
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30090
  type: NodePort
